tests/ui/lint/snapshots/needless_range_loop_read.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Needless range loop
   ╭─[test.lis:4:12]
 3 │   let xs = [10, 20, 30]
 4 │   for i in 0..xs.length() {
   ·            ───────┬──────
   ·                   ╰── can be simpler
 5 │     let _ = xs[i]
   ╰────
  help: This loop exposes the index only to access elements of `xs`. Iterate directly over the elements with `for value in xs` · code: [lint.needless_range_loop]
