tests/ui/lint/snapshots/needless_return_if_else_branches.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Needless `return`
   ╭─[test.lis:4:5]
 3 │   if n > 0 {
 4 │     return 1
   ·     ────┬───
   ·         ╰── redundant in tail position
 5 │   } else {
   ╰────
  help: The final expression of a function is its return value. Drop `return` and keep the value · code: [lint.needless_return]
