tests/ui/lint/snapshots/needless_split_after_n.snap
---
source: tests/ui/lint/mod.rs
---
  ● Needless `SplitAfterN`
   ╭─[test.lis:6:11]
 5 │   let s = "a,b,c"
 6 │   let _ = strings.SplitAfterN(s, ",", -1)
   ·           ───────────────┬───────────────
   ·                          ╰── splits with no limit
 7 │ }
   ╰────
  help: `strings.SplitAfterN(s, ",", -1)` splits with no limit. Use `strings.SplitAfter(s, ",")` · code: [lint.needless_splitn]
