tests/ui/lint/snapshots/needless_splitn.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Needless `SplitN`
   ╭─[test.lis:6:11]
 5 │   let s = "a,b,c"
 6 │   let _ = strings.SplitN(s, ",", -1)
   ·           ─────────────┬────────────
   ·                        ╰── splits with no limit
 7 │ }
   ╰────
  help: `strings.SplitN(s, ",", -1)` splits with no limit. Use `strings.Split(s, ",")` · code: [lint.needless_splitn]
