tests/ui/lint/snapshots/needless_splitn_aliased_import.snap
---
source: tests/ui/lint/mod.rs
---
  ● Needless `SplitN`
   ╭─[test.lis:6:11]
 5 │   let s = "a,b,c"
 6 │   let _ = mystr.SplitN(s, ",", -1)
   ·           ────────────┬───────────
   ·                       ╰── splits with no limit
 7 │ }
   ╰────
  help: `mystr.SplitN(s, ",", -1)` splits with no limit. Use `mystr.Split(s, ",")` · code: [lint.needless_splitn]
