tests/ui/lint/snapshots/needless_update.snap
---
source: tests/ui/lint/mod.rs
---
  ● Needless struct update
   ╭─[test.lis:7:35]
 6 │ fn rebuild(base: Config) -> Config {
 7 │   Config { debug: true, port: 80, ..base }
   ·                                   ───┬──
   ·                                      ╰── has no effect
 8 │ }
   ╰────
  help: Remove `..base` · code: [lint.needless_update]
